<resources>
    <string name="app_name">Kuwait</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="iban_tool">IBAN TOOL</string>
    <string name="currency">Currency</string>
    <string name="from">From :</string>
    <string name="kwd">KWD</string>
    <string name="to">To :</string>
    <string name="convert">Convert</string>
    <string name="enter_iban_number">Enter IBAN Number</string>
    <string name="validate">Validate</string>
</resources>